# dockerized-python-ci-demo

./: .flake8  Dockerfile  README.md  pyproject.toml
.github/workflows/: pull_request.yml
app/: main.py
app/models/: calc_request.py  calc_response.py
app/routers/: calculator.py  health.py  readiness.py
tests/routers/: test_calculator.py
